Fixed overflow

--- a/assets/css/bottom-styles.css
+++ b/assets/css/bottom-styles.css
@@ -1,5 +1,6 @@
 @import "fonts.css";
 
+/* PAST */
 :root {
   --slideshow-width: 886px;
 }
@@ -10,14 +11,14 @@
 
 .past-title {
   width: 185px;
+  text-align: center;
+  margin: 0 auto 50px auto;
   color: #1a3c44;
   font-family: "fuseBold";
   font-size: 28px;
   font-weight: bold;
   letter-spacing: 0;
   line-height: 38px;
-  text-align: center;
-  margin: 0 auto 50px auto;
 }
 
 .break {
@@ -33,30 +34,30 @@
 }
 
 .break-year {
+  margin: 10px 0 0 0;
+  z-index: 1;
   color: #1a3c44;
   font-family: "fuseBold";
   font-size: 22px;
   line-height: 30px;
-  margin: 10px 0 0 0;
-  z-index: 1;
 }
 
 .break-vertical {
+  height: 328px;
+  width: 3px;
   background-image: linear-gradient(#7a8e94 65%, rgba(0, 0, 0, 0) 0%);
   background-size: 4px 32px;
   background-repeat: repeat-y;
-  height: 328px;
-  width: 3px;
 }
 
 .break-rectangle {
+  position: relative;
+  bottom: 8px;
+  margin: 0px;
   height: 4px;
   width: 48px;
   border-radius: 2px;
   background-color: #5ec4bc;
-  margin: 0px;
-  position: relative;
-  bottom: 8px;
 }
 
 .break-bottom {
@@ -108,40 +109,24 @@
   text-align: center;
 }
 
-.slideshow:nth-of-type(1) {
-  animation: slide1 40s linear infinite;
+.slideshow {
+  animation: sliding 40s linear infinite;
 }
 
-.slideshow:nth-of-type(2) {
-  animation: slide2 40s linear infinite;
+.past {
+  overflow-x: hidden;
 }
 
 .slides {
   display: flex;
-  overflow: visible;
 }
 
-@keyframes slide1 {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(calc(-1 * var(--slideshow-width)));
-  }
-  50.01% {
-    transform: translateX(var(--slideshow-width));
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-@keyframes slide2 {
+@keyframes sliding {
   0% {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(calc(-2 * var(--slideshow-width)));
+    transform: translate3d(calc(-1 * var(--slideshow-width)), 0, 0);
   }
 }
 
@@ -159,22 +144,23 @@
   .slideshow-item {
     height: 194px;
   }
+
   .slideshow-card {
     width: 194px;
   }
+
   .slideshow-photos {
     width: 1320px;
   }
+
   .break-vertical {
     height: 460px;
   }
-  .slideshow-text {
-    font-size: 20px;
-    width: 100px;
-  }
-}
 
-@media screen and (min-width: 1024px) {
+  .slideshow-text {
+    width: 100px;
+    font-size: 20px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -184,23 +170,26 @@
 
   .slideshow-photos {
     margin: 25px 26px;
+    width: 1780px;
   }
+
   .slideshow-row {
     margin-bottom: 40px;
   }
+
   .slideshow-item {
     height: 260px;
   }
+
   .slideshow-card {
     width: 260px;
   }
-  .slideshow-photos {
-    width: 1780px;
-  }
+
   .break-vertical {
     height: 605px;
     width: 4px;
   }
+
   .break-top {
     border-width: 4px;
   }
@@ -239,6 +228,8 @@
   }
 }
 
+/* APP */
+
 .app {
   display: flex;
   flex-direction: column;
@@ -247,9 +238,9 @@
   margin-top: 100px;
 
   background-image: url("../images/Mockup.png");
-  background-size: 350px;
+  background-size: 370px;
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: bottom right;
 }
 
 .app-note {
@@ -272,8 +263,8 @@
 }
 
 .app-buttons {
-  margin-top: 38px;
   display: flex;
+  margin-top: 38px;
 }
 
 .app-button {
@@ -301,41 +292,47 @@
 
 .app-title {
   max-width: 331px;
+  margin: 0;
+  margin-bottom: 38px;
   color: #1a3c44;
   font-family: "fuseBold";
   font-size: 28px;
   font-weight: bold;
   line-height: 38px;
-  margin: 0;
-  margin-bottom: 38px;
 }
 
 @media screen and (min-width: 768px) {
   .app-svg {
     width: 19px;
   }
+
   .app-title {
     max-width: 842px;
   }
+
   .app-note p {
     font-size: 20px;
     width: 382px;
     line-height: 30px;
     margin: 12.5px 29px;
   }
+
   .app-button {
     width: 144px;
     height: 46px;
     font-size: 20px;
   }
+
   .app-title {
     font-size: 40px;
     line-height: 60px;
   }
+
   .app {
     background-position: right bottom;
     background-size: 530px;
   }
+
   .app-container {
     margin-left: 50px;
   }
@@ -354,11 +351,14 @@
     align-items: flex-start;
     margin-top: 116px;
   }
+
   .app-container {
     margin-top: 105px;
     margin-left: 220px;
   }
 }
+
+/* QUESTION */
 
 .question-title {
   margin: 0;
@@ -432,16 +432,22 @@
 @media screen and (min-width: 768px) {
   .question {
     margin-top: 120px;
-    width: 55%;
-    min-width: 600px;
+    width: 680px;
     height: 140px;
     flex-direction: row;
     justify-content: space-between;
     padding: 0 60px;
     align-items: center;
   }
+
   .question-text {
     margin: 15px 0 0 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .question {
+    width: 900px;
   }
 }
 
@@ -470,6 +476,8 @@
     height: 24px;
   }
 }
+
+/* FOOTER */
 
 footer {
   display: flex;
@@ -522,6 +530,7 @@ footer {
     height: 36px;
     margin: 157px auto 75px auto;
   }
+
   .copyright {
     display: flex;
     flex-direction: row;
