--- a/assets/css/schedule-styles.css
+++ b/assets/css/schedule-styles.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
   background-color: rgb(240, 243, 246);
   font-family: "fuseRegular";
 }
